<resources>
    <string name="app_name">Memory Slasher</string>
    <string name="title_internal">Internal SD</string>
    <string name="title_external">External SD</string>
    <string name="title_settings">Settings</string>
    <string name="compressing_files">Compressing files…</string>
    <string name="checking_for_duplicates">Checking for duplicates…</string>
    <string name="please_rate">Hey there! You seem to like this app, would you mind visiting the Play Store and give a rating? It would help us a great deal!
    \n\nIf instead you hate this app, we would love to hear your feedback so we can improve. Thanks!</string>
    <string name="please_rate_short">Hey, you seem to like this app. You would help us a great deal with a 5-star rating!</string>
    <string name="button_yes">Rate!</string>
    <string name="button_no">No thanks</string>
    <string name="button_feedback">Give feedback</string>
    <string name="button_dont_ask">Don’t ask again</string>
    <string name="swipe_to_dismiss">Swipe to dismiss</string>
    <string name="resized"></string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="documents">Documents</string>
    <string name="duplicates_turned_off">Duplicate files detection/delete is turned off.</string>
    <string name="memory_utilized_efficiently">Congratulations. Your memory is efficiently utilized</string>
    <string name="optimization_turned_off">Image optimization/compression is turned off.</string>
    <string name="scanning_all_files">Scanning all files. Please wait…</string>
    <string name="scanning_complete">Scanning complete…</string>
    <string name="optimization_error">An error occurred during optimization. All images could not be processed</string>
    <string name="delete_duplicates">Delete duplicates</string>
    <string name="delete_duplicate_files">Delete duplicate files</string>
    <string name="optimize_picture_smaller">Optimize pictures for smaller sizes</string>
    <string name="compress_pictures">Compress pictures</string>
    <string name="picture_quality_to_use">The picture quality to use in compression</string>
    <string name="picture_quality">Picture quality</string>
    <string name="name_to_append">Name to append on resized pictures</string>
    <string name="resized_name">Resized name</string>
    <string name="vibrate_when_complete">Vibrate when cleanup is complete</string>
    <string name="vibrate_on_done">Vibrate on done</string>
    <string name="max_height_width_after_resize">Max height or width after picture resize</string>
    <string name="max_height_width">Max height/width</string>
    <string name="picture_ignore_size">Picture Ignore Size</string>
    <string name="skip_compress_pictures">Skip compressing pictures of this size</string>
</resources>
